# myCode

./: CMakeLists.txt  Project3.sln
Project3/: AABB.h  Asset.cpp  Asset.h  Base.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraBase.h  CameraWorldBased.cpp  CameraWorldBased.h  Circle.cpp  Circle.h  Collision.cpp  Collision.h  CreateSourceGroupsForTarget.txt  DebugPrint.h  Directions.h  Display.cpp  Display.h  FindSDL2.cmake  FindZmq.cmake  FpsManager.cpp  FpsManager.h  GameManager.cpp  GameManager.h  GameState.h  GenericRenderer.cpp  GenericRenderer.h  InputManager.cpp  InputManager.h  LightSource.h  LogicManager.cpp  LogicManager.h  Manager.h  Mesh.cpp  Mesh.h  MtQuadTree.cpp  MtQuadTree.h  (+38 more)
Project3/AI/: Ai.cpp  Ai.h  BasicAi.cpp  BasicAi.h  FlyByWireAi.cpp  FlyByWireAi.h
Project3/Components/: Component.cpp  Component.h  Engine.cpp  Engine.h  Sensor.cpp  Sensor.h
Project3/InputHandlers/: CameraMouseZoomHandler.inl  CameraRightClickMoveHandler.inl  Directions.h  FlyByWireAiController.inl  MoveOnKeyDownHandler.inl  RightClickMoveHandler.inl
Project3/Physics/: CollisionIsland.h  Contact.h  ContactFilter.h  Fixture.h  Manifold.h  MassData.h  PhysCommon.h  Shape.h  Transform.h
Project3/Physics/Collision/: CircleToCircleCollision.h  CircleToPolygonCollision.h  Collision.h  CollisionHandler.cpp  CollisionHandler.h  InvertCollision.h  PolygonToPolygonCollision.h
Project3/Physics/Shapes/: CircleShape.h  PolygonShape.h
Project3/res/: basicShader.fs  basicShader.vs  objectShader.fs  objectShader.vs  objectShader2.fs  objectShader2.vs
SDL2/lib/: SDL2.lib  SDL2main.lib  SDL2test.lib
